--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,53 @@
-// TODO
+.logo {
+  margin-top: 79.5px;
+}
+
+.posts {
+  margin-top: 64.8px;
+
+  > a {
+    > div:nth-child(1) {
+      h1 {
+        font-size: 1.75rem;
+      }
+
+      p {
+        margin-top: 8px;
+        font-size: 1.125rem;
+        color: var(--gray-300);
+      }
+    }
+    > div:nth-child(2) {
+      margin-top: 24px;
+      display: flex;
+
+      div {
+        display: flex;
+        align-items: center;
+
+        color: var(--gray-400);
+
+        & + div {
+          margin-left: 26px;
+        }
+
+        p,
+        time {
+          margin-left: 8px;
+          font-size: 0.875rem;
+        }
+
+        svg {
+          height: 20px;
+          width: 20px;
+        }
+      }
+    }
+
+    & + a {
+      h1 {
+        margin-top: 48px;
+      }
+    }
+  }
+}
