--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -51,3 +51,20 @@
     }
   }
 }
+
+.loadMorePosts {
+  margin-top: 64px;
+  margin-bottom: 80px;
+
+  > button {
+    background: transparent;
+    border: none;
+    color: var(--pink-500);
+    font-weight: 600;
+    font-size: 1.125rem;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
